[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/art_assets/allSprites_default.png" type="Texture" id=1]
[ext_resource path="res://Bullet.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 344, 551, 8, 14 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.41801, 4.24851 )

[node name="Bullet" type="Area2D"]
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -1.22499, 1.61475 )
scale = Vector2( 2.09135, 1.6292 )

[node name="LifeTime" type="Timer" parent="."]
wait_time = 15.0
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="LifeTime" to="." method="_on_LifeTime_timeout"]
